--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles.css">
+    <script async defer src="/bundle.js"></script>  
   </head>
   <body>
     <div id="main"></div>
-    <script async defer src="/bundle.js"></script>    
   </body>
 </html> 
